client: Fix SIGSEGV in fallback copy

If the daemon is killed during the fallback copy, it is possible that
proxy is NULL which causes a segfault when unrefing it.  Use
g_clear_object() instead.

https://bugzilla.gnome.org/show_bug.cgi?id=711454